feat: new endpoint for done exercises by user
